Fix button alignment on homepage

--- a/app/assets/stylesheets/species/all.css
+++ b/app/assets/stylesheets/species/all.css
@@ -384,7 +384,7 @@ form, fieldset {
 	padding: 0 14px;
 	position: relative;
 	background: #376382;
-	line-height: 30px;
+	line-height: 31px;
 	-webkit-border-radius: 20px;
 	border-radius: 20px;
 }
